tests/src/errors/methodDestructure/arr.spec.2.ts
{
	const arr = [1, 2, 3, 4];
	const i: "isEmpty" = "isEmpty";
	const b = arr["isEmpty"];
}
export {};
